--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ incremental = false                               # Disable incremental compilat
 
 
 [dependencies]
-bytes = "1.3.0"                                    
+bytes = "1.3.0"                                     # helps manage buffers
 nom = "8.0.0"
 glob = "0.3"
+argh = "0.1.13"
+rand = "0.9.0"
